@@ -31,6 +31,7 @@ Bug fixes
  * ``WAGTAILFRONTENDCACHE_LANGUAGES`` was being interpreted incorrectly. It now accepts a list of strings, as documented (Karl Hobley)
  * Update oEmbed endpoints to use https where available (Matt Westcott)
  * Revise ``edit_handler`` bind order in ModelAdmin views and fix duplicate form instance creation (Jérôme Lebleu)
+ * Properly distinguish child blocks when comparing revisions with nested StreamBlocks (Martin Mena)
 
 
 Upgrade considerations
