@@ -17,6 +17,7 @@ Changelog
  * Fix: `WAGTAILFRONTENDCACHE_LANGUAGES` was being interpreted incorrectly. It now accepts a list of strings, as documented (Karl Hobley)
  * Fix: Update oEmbed endpoints to use https where available (Matt Westcott)
  * Fix: Revise `edit_handler` bind order in ModelAdmin views and fix duplicate form instance creation (Jérôme Lebleu)
+ * Fix: Properly distinguish child blocks when comparing revisions with nested StreamBlocks (Martin Mena)
 
 
 2.10.2 (xx.xx.xxxx) - IN DEVELOPMENT
